--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "gulp-aegean",
 	"version": "0.1.0",
-	"description": "Plugin for aegean (ES6 inline import).",
+	"description": "Gulp plugin for aegean (ES6 inline import).",
 	"main": "dist/main.js",
 	"repository": "https://github.com/khalyomede/gulp-aegean",
 	"author": "Khalyomede <khalyomede@gmail.com>",
