--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
 		"import"
 	],
 	"devDependencies": {
-		"@types/node": "^10.12.11",
-		"gulp": "^3.9.1",
-		"gulp-typescript": "^5.0.0",
-		"plugin-error": "^1.0.1",
-		"through2": "^3.0.0",
-		"typescript": "^3.2.1"
+		"@types/node": "10.*",
+		"gulp": "4.*",
+		"gulp-typescript": "5.*",
+		"plugin-error": "1.*",
+		"through2": "3.*",
+		"typescript": "3.*"
 	},
 	"dependencies": {
-		"aegean": "^0.1.1"
+		"aegean": "0.*"
 	},
 	"scripts": {
 		"dev": "gulp watch:js"
